--- a/galeria.html
+++ b/galeria.html
@@ -257,7 +257,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/001.webp" />  
                <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>       
                       
             </div>
@@ -272,7 +272,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/002.webp" />   
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>               
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -286,7 +286,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/003.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -300,7 +300,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/004.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -314,7 +314,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/005.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -328,7 +328,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -342,7 +342,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -356,7 +356,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/008.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -370,7 +370,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/009.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -384,7 +384,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/010.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -398,7 +398,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/011.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -412,7 +412,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" /> 
                          <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                 
             </div>
             <div class="carta trasera lazy-michi "> </div>
@@ -426,7 +426,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido  lazy-michi"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera  lazy-michi"> </div>
@@ -440,7 +440,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera  lazy-michi"> </div>
@@ -454,7 +454,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido  lazy-michi"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera  lazy-michi"> </div>
@@ -468,7 +468,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido  lazy-michi"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera  lazy-michi"> </div>
@@ -482,7 +482,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" /> 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                 
             </div>
             <div class="carta trasera lazy-michi"> </div>
@@ -496,7 +496,7 @@
               <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
                 </div>                  
             </div>
             <div class="carta trasera lazy-michi"> </div>
@@ -759,7 +759,7 @@
               <img loading="lazy" class="michi" src="assets/cartas/032/032_borde.webp" style="z-index: 20;" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
                 </div> 
     </div>
     <div class="carta trasera"> </div>
@@ -780,7 +780,7 @@
 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
                 </div> 
     </div>
     <div class="carta trasera"> </div>
@@ -804,7 +804,7 @@
     "></div> 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
                 </div> 
     </div>
     <div class="carta trasera"> </div>
@@ -828,7 +828,7 @@
     "></div> 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido"></DIV>
-                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
                 </div> 
     </div>
     <div class="carta trasera"> </div>
