--- a/galeria.html
+++ b/galeria.html
@@ -70,75 +70,75 @@
   <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-pass="MAXDEF">
-      <button  class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
+      <button  class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="QUIMICO">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="DINOMAX">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="MICHIBAG">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-4"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-4"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="WORKALLDAY">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-5"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-5"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-6"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-6"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="MAGIC">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/008.webp);" data-target="carousel-item-8"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/008.webp);" data-target="carousel-item-8"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="GOLD">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/009.webp);" data-target="carousel-item-9"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/009.webp);" data-target="carousel-item-9"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="MUSICAT">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/010.webp);" data-target="carousel-item-10"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/010.webp);" data-target="carousel-item-10"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="sorpresa">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/011.webp);" data-target="carousel-item-11"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/011.webp);" data-target="carousel-item-11"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-13"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-13"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-14"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-14"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-15"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-15"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-16"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-16"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-17"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-17"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-18"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-18"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
  
@@ -149,51 +149,51 @@
   <div class="contenedorcolores" >
 
     <div class="carta-wrapper" data-pass="SUPERMARKET">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/019.webp);" data-target="carousel-item-19"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/019.webp);" data-target="carousel-item-19"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="AIRFORCE">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/020.webp);" data-target="carousel-item-20"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/020.webp);" data-target="carousel-item-20"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="RADIACTIVO">
-      <button class="cartaejemplo" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/021.webp);" data-target="carousel-item-21"></button>
+      <button class="cartaejemplo plata" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/021.webp);" data-target="carousel-item-21"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="SPEED">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/022.webp);" data-target="carousel-item-22"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/022.webp);" data-target="carousel-item-22"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="GALAXYCAT">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/023.webp);" data-target="carousel-item-23"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/023.webp);" data-target="carousel-item-23"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="ESTRESFUERA">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/024.webp);" data-target="carousel-item-24"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/024.webp);" data-target="carousel-item-24"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="WILSOOON">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/025.webp);" data-target="carousel-item-25"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/025.webp);" data-target="carousel-item-25"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="MT800">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/026.webp);" data-target="carousel-item-26"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/026.webp);" data-target="carousel-item-26"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="DIASOLEADO">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="MUNDOFELIZ">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/028.webp);" data-target="carousel-item-28"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/028.webp);" data-target="carousel-item-28"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-29"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-29"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-30"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-30"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
 
@@ -203,27 +203,27 @@
   <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="031">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE 10 CARTAS</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-requiere-cantidad="20" data-pass="032">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/032.webp);" data-target="carousel-item-32"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/032.webp);" data-target="carousel-item-32"></button>
       <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS NORMALES</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="033">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS RARAS</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="034">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["GOLD","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
       <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> para desbloquear esta carta. </p>" > </div>
     </div>
     <div class="carta-wrapper" data-requiere-cantidad="30" data-pass="036">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
       <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>COMPLETA LA COLECCIÓN</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
 
@@ -540,7 +540,7 @@
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
               <img loading="lazy" class="medio" src="assets/cartas/020/0020fondo.webp" />                
-              <div class="lineascolores" style="z-index: 9; transform: rotate(65deg) scale(1.75);"></div>  
+              <div class="lineascolores" style="z-index: 9; transform: rotate(55deg) scale(1); filter: sepia(1) saturate(5) hue-rotate(310deg);"></div>  
                 <div data-lazy="true" class="michi lazy-michi" data-style="
                 z-index: 19;
                 background-image: url('/assets/cartas/020/0020michi.webp'); 
