--- a/galeria.html
+++ b/galeria.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#5c1a7e" id="theme-color-meta">
+
     <title>Michi Box Card Game</title>
 
     <!-- Estilos -->
