--- a/quees.html
+++ b/quees.html
@@ -4,6 +4,8 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+<meta name="theme-color" content="#5c1a7e" id="theme-color-meta">
+
     
     <link rel="stylesheet" tipe="text/css" href="style/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
