--- a/galeria.html
+++ b/galeria.html
@@ -198,27 +198,27 @@
 
     <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="031">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE 10 CARTAS DE: <br> MICHI-BOX</b> <br> para desbloquear esta carta. </p>"> </div>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE <br> 10 CARTAS DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="normal" data-pass="032">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/032.webp);" data-target="carousel-item-32"></button>
-      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS NORMALES DE: <br> MICHI-BOX </b> <br> para desbloquear esta carta. </p>"></div>
+      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE TODAS <br> LAS CARTAS NORMALES DE <br> MICHI-BOX </b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="raro" data-pass="033">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS RARAS DE: <br> MICHI-BOX</b> <br> para desbloquear esta carta. </p>"></div>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS <br> LAS CARTAS RARAS DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["GOLD","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["GOLD","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear <br> esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> para desbloquear esta carta. </p>" > </div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> para desbloquear <br> esta carta. </p>" > </div>
     </div>
     <div class="carta-wrapper" data-requiere-cantidad="30" data-pass="036">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
-      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>COMPLETA LA COLECCIÓN DE: <br> MICHI-BOX</b> <br> para desbloquear esta carta. </p>"></div>
+      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>COMPLETA LA <br> COLECCIÓN DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
 
   </div>
@@ -1149,9 +1149,9 @@
       <div class="carruseldeexpansiones-container">
         <button class="carruseldeexpansiones-btn prev" onclick="moverCarruseldeExpansiones(-1)">‹</button>
         <div class="carruseldeexpansiones">
-          <a href="#MICHIBOX001" onclick="cerrarVentanaExpansiones()" data-lazy="true"  class="carruseldeexpansiones-item lazy-michi" style="background-image: url(./assets/expansion001.webp);"> <p>MICHI-BOX</p> </a>
-          <a href="#MICHIBOX002" onclick="cerrarVentanaExpansiones()" data-lazy="true"  class="carruseldeexpansiones-item lazy-michi" style="background-image: url(./assets/expansion002.webp); filter: grayscale(1);"> <p> (PRÓXIMAMENTE) </p> </a>
-          <a href="#MICHIBOX003" onclick="cerrarVentanaExpansiones()"  data-lazy="true"  class="carruseldeexpansiones-item lazy-michi" style="background-image: url(./assets/expansion003.webp); filter: grayscale(1);"> <p>(PRÓXIMAMENTE)</p> </a>
+          <a href="#MICHIBOX001" onclick="cerrarVentanaExpansiones()" data-lazy="true"  class="carruseldeexpansiones-item lazy-michi" style="background-image: url(./assets/expansion001_sobre.webp);">  </a>
+          <a href="#MICHIBOX002" onclick="cerrarVentanaExpansiones()" data-lazy="true"  class="carruseldeexpansiones-item lazy-michi" style="background-image: url(./assets/expansion_proximamente_sobre.webp);">  </a>
+          <a href="#MICHIBOX003" onclick="cerrarVentanaExpansiones()"  data-lazy="true"  class="carruseldeexpansiones-item lazy-michi" style="background-image: url(./assets/expansion_proximamente_sobre.webp);">  </a>
         </div>
     <button class="carruseldeexpansiones-btn next" onclick="moverCarruseldeExpansiones(1)">›</button>
       </div>
