--- a/galeria.html
+++ b/galeria.html
@@ -205,8 +205,8 @@
       <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE TODAS <br> LAS CARTAS NORMALES DE <br> MICHI-BOX </b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="raro" data-pass="033">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS <br> LAS CARTAS RARAS DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"></div>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/033.webp);" data-target="carousel-item-33"></button>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE <br> TODAS  LAS <br> CARTAS RARAS <br> DE  MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
@@ -1049,6 +1049,26 @@
   </div>
 </div>
 <!-----------------------------------------------------------------------------> 
+        <!-----------------------------------------033------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-33">
+                        <p class="textorareza"> MICHI REY</p>
+                        <P class="textorareza PLEGENDARIO" >LEGENDARIA </P>
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+                              <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1) saturate(3)"></div>  
+              <img loading="lazy" class="arriba" src="./assets/cartas/LEGENDARIAS/033/034_fondo.webp"  />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/033/034_sombra.webp" style="z-index: 21;" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+  </div>
+</div>
+<!-----------------------------------------------------------------------------> 
+
 
         <!-----------------------------------------034------------------------------------>
 
