--- a/galeria.html
+++ b/galeria.html
@@ -1022,6 +1022,28 @@
 
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
+        <!-----------------------------------------031------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-31">
+                        <p class="textorareza"> MICHI DE COLECCIÓN #1</p>
+                        <P class="textorareza PLEGENDARIO" >LEGENDARIA </P>
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+                              <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1) saturate(3)"></div>  
+              <img loading="lazy" class="arriba" src="./assets/cartas/LEGENDARIAS/031/031_FONDO.webp"  />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/031/031_CAJA_ATRAS.webp" style="z-index: 10; animation: sacudida 1s ease  forwards;" />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/031/031_CAJA_MEDIO.webp" style="z-index: 11; animation: sacudida 1s ease reverse  forwards;"  />
+              <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/031/031_CAJA_DELANTE.webp" style="z-index: 12; animation: sacudida 1s ease  forwards;" />
+
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+  </div>
+</div>
+<!-----------------------------------------------------------------------------> 
 
         <!-----------------------------------------032------------------------------------>
 
