--- a/galeria.html
+++ b/galeria.html
@@ -197,7 +197,7 @@
   <div class="contenedorcolores">
 
     <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="031">
-      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
+      <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/031.webp);" data-target="carousel-item-31"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE <br> 10 CARTAS DE <br> MICHI-BOX</b> <br> para desbloquear <br> esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-requiere-rareza="normal" data-pass="032">
@@ -1030,8 +1030,9 @@
   <div class="tarjeta">
     <div class="carta frente" data-circle="circle5 circle4">
       <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
-                              <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1) saturate(3)"></div>  
-              <img loading="lazy" class="arriba" src="./assets/cartas/LEGENDARIAS/031/031_FONDO.webp"  />
+                    <img loading="lazy" class="michi" src="./assets/cartas/LEGENDARIAS/031/031_FONDO_02a.webp" style="z-index: 8;" />
+                              <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1)"></div>  
+              <img loading="lazy" class="arriba" src="./assets/cartas/LEGENDARIAS/031/031_FONDO_02.webp"  />
               <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/031/031_CAJA_ATRAS.webp" style="z-index: 10; animation: sacudida 1s ease  forwards;" />
               <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/031/031_CAJA_MEDIO.webp" style="z-index: 11; animation: sacudida 1s ease reverse  forwards;"  />
               <img loading="lazy" class="michi" src="assets/cartas/LEGENDARIAS/031/031_CAJA_DELANTE.webp" style="z-index: 12; animation: sacudida 1s ease  forwards;" />
