--- a/galeria.html
+++ b/galeria.html
@@ -182,8 +182,8 @@
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/028.webp);" data-target="carousel-item-28"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="029">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-29"></button>
+    <div class="carta-wrapper" data-pass="MAXLIVEX">
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/029.webp);" data-target="carousel-item-29"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="030">
@@ -214,7 +214,7 @@
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> para desbloquear <br> esta carta. </p>" > </div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800","MAXLIVEX"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> <b>●MICHI RAYOS X</b> <br> para desbloquear <br> esta carta. </p>" > </div>
     </div>
     <div class="carta-wrapper" data-requiere-cantidad="30" data-pass="036">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
@@ -1020,6 +1020,26 @@
           </div>
         </div>
 
+
+             <!--------------------------------029---------------------------------------------> 
+       
+        <div class="carousel-item Craro" id="carousel-item-29">
+                        <p class="textorareza"> MICHI RAYOS X</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle2">
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/029/029_fondo.webp" style="animation: psicodelicoBrillo 4s ease-in-out infinite;"/>   
+                 <div class="lineascolores" style="z-index: 9; transform: rotate(90deg) scale(1); filter: grayscale(1) brightness(2) opacity(50%); width: 200%;"></div>  
+                <img loading="lazy" class="sombra" src="assets/cartas/RARAS/029/029_medio.webp"  />
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/029/029_arriba.webp" style="z-index: 20; animation: parpadeorayosx 15s ease-in-out infinite;" />
+                           <div class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/027/027_QR.webp);"> </div> 
+
+            </div>
+          </div>
+        </div>
+
+
+       
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
         <!-----------------------------------------031------------------------------------>
