--- a/galeria.html
+++ b/galeria.html
@@ -63,75 +63,75 @@
   <div class="expansion"  style="background-image: url(./assets/logoprograma03.webp);"></div>
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-pass="MAXDEF" >
+    <div class="carta-wrapper" data-pass="001AMB568S69TF785" >
       <button  class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/001.webp);" data-target="carousel-item-1"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="QUIMICO">
+    <div class="carta-wrapper" data-pass="002AMBGH8S6TH9985">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/002.webp);" data-target="carousel-item-2"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="DINOMAX">
+    <div class="carta-wrapper" data-pass="003AMB06JHG8TF822">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="MICHIBAG">
+    <div class="carta-wrapper" data-pass="004AMB06JHGHJV88D">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-4"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="WORKALLDAY">
+    <div class="carta-wrapper" data-pass="005AMB0OJHGRRF442">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/005.webp);" data-target="carousel-item-5"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="006">
+    <div class="carta-wrapper" data-pass="006AMB0HJHKKLA21S">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-6"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="007">
+    <div class="carta-wrapper" data-pass="007AMBGGJHGUJ6122">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="MAGIC">
+    <div class="carta-wrapper" data-pass="008AMB06JHYGV52AE">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/008.webp);" data-target="carousel-item-8"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="GOLD">
+    <div class="carta-wrapper" data-pass="009AMBF6JHG8HJ82A">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/009.webp);" data-target="carousel-item-9"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="MUSICAT">
+    <div class="carta-wrapper" data-pass="010AMBK6JHG8HYHH5">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/010.webp);" data-target="carousel-item-10"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="sorpresa">
+    <div class="carta-wrapper" data-pass="011KMBF6JJG8HJ82A">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/011.webp);" data-target="carousel-item-11"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="012">
+    <div class="carta-wrapper" data-pass="0120MBF6JJG8UUUU8">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="013">
+    <div class="carta-wrapper" data-pass="0130MB36JJG8TG511">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-13"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="014">
+    <div class="carta-wrapper" data-pass="0140MB36JJG8KCV54">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-14"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="015">
+    <div class="carta-wrapper" data-pass="0150MBHJJJGRRF511">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-15"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="016">
+    <div class="carta-wrapper" data-pass="0160MB36JJHG57K11">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-16"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="017">
+    <div class="carta-wrapper" data-pass="017AMB017JHG57RFT">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-17"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="018">
+    <div class="carta-wrapper" data-pass="018AMB05H2HG57GTV">
       <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-18"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
@@ -142,51 +142,51 @@
 
   <div class="contenedorcolores" >
 
-    <div class="carta-wrapper" data-pass="SUPERMARKET">
+    <div class="carta-wrapper" data-pass="019AMB658GHG575TV">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/019.webp);" data-target="carousel-item-19"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="AIRFORCE">
+    <div class="carta-wrapper" data-pass="020AMB0562HGHYUD5">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/020.webp);" data-target="carousel-item-20"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="RADIACTIVO">
+    <div class="carta-wrapper" data-pass="021AMB0562HGH673D">
       <button class="cartaejemplo plata" data-lazy="true"  data-style="background-image: url(./assets/cartas/MINIATURAS/021.webp);" data-target="carousel-item-21"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="SPEED">
+    <div class="carta-wrapper" data-pass="0221MB0562HG78684">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/022.webp);" data-target="carousel-item-22"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="GALAXYCAT">
+    <div class="carta-wrapper" data-pass="0230MB0262HGGTFY5">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/023.webp);" data-target="carousel-item-23"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="ESTRESFUERA">
+    <div class="carta-wrapper" data-pass="0240MB0262HGGHY22">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/024.webp);" data-target="carousel-item-24"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="WILSOOON">
+    <div class="carta-wrapper" data-pass="0250MB0262HFTGY32">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/025.webp);" data-target="carousel-item-25"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="MT800">
+    <div class="carta-wrapper" data-pass="0260MB026FFFFGY32">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/026.webp);" data-target="carousel-item-26"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="DIASOLEADO">
+    <div class="carta-wrapper" data-pass="0270MB0554F99GFGT">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/027.webp);" data-target="carousel-item-27"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="MUNDOFELIZ">
+    <div class="carta-wrapper" data-pass="0280MB1154F99GTU5">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/028.webp);" data-target="carousel-item-28"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="MAXLIVEX">
+    <div class="carta-wrapper" data-pass="0290MB1GHJJK82G76">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/029.webp);" data-target="carousel-item-29"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
-    <div class="carta-wrapper" data-pass="030">
+    <div class="carta-wrapper" data-pass="0300MB1GT88K82GTH">
       <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-30"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
