--- a/galeria.html
+++ b/galeria.html
@@ -210,11 +210,11 @@
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["GOLD","SUPERMARKET","MUNDOFELIZ"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear <br> esta carta. </p>"  ></div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["009AMBF6JHG8HJ82A","019AMB658GHG575TV","0280MB1154F99GTU5"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI MONEDA</b> <br> <b>●MICHI VENDEDOR</b> <br> <b>●MICHI GARRA</b> <br> para desbloquear <br> esta carta. </p>"  ></div>
     </div>
     <div class="carta-wrapper" data-pass="035">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/035.webp);" data-target="carousel-item-35"></button>
-      <div class="overlay-bloqueo overespecial" data-requiere='["QUIMICO","MT800","MAXLIVEX"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> <b>●MICHI RAYOS X</b> <br> para desbloquear <br> esta carta. </p>" > </div>
+      <div class="overlay-bloqueo overespecial" data-requiere='["002AMBGH8S6TH9985","0260MB026FFFFGY32","0290MB1GHJJK82G76"]' data-cartel="<p> Necesitas a: <br> <b>●MICHI CIENTÍFICO</b> <br> <b>●MICHI ROBOT</b> <br> <b>●MICHI RAYOS X</b> <br> para desbloquear <br> esta carta. </p>" > </div>
     </div>
     <div class="carta-wrapper" data-requiere-cantidad="30" data-pass="036">
       <button class="cartaejemplo oro"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/036.webp);" data-target="carousel-item-36"></button>
