--- a/galeria.html
+++ b/galeria.html
@@ -1028,7 +1028,7 @@
                         <P class="textorareza PRARO" >RARA </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4 circle2">
-              <img loading="lazy" class="medio" src="assets/cartas/RARAS/029/029_fondo.webp" style="animation: psicodelicoBrillo 4s ease-in-out infinite;"/>   
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/029/029_fondo.webp"/>   
                  <div class="lineascolores" style="z-index: 9; transform: rotate(90deg) scale(1); filter: grayscale(1) brightness(2) opacity(50%); width: 200%;"></div>  
                 <img loading="lazy" class="sombra" src="assets/cartas/RARAS/029/029_medio.webp"  />
                 <img loading="lazy" class="michi" src="assets/cartas/RARAS/029/029_arriba.webp" style="z-index: 20; animation: parpadeorayosx 15s ease-in-out infinite;" />
