--- a/galeria.html
+++ b/galeria.html
@@ -187,7 +187,7 @@
       <div class="overlay-bloqueo overraro"></div>
     </div>
     <div class="carta-wrapper" data-pass="0300MB1GT88K82GTH">
-      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-30"></button>
+      <button class="cartaejemplo plata"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/030.webp);" data-target="carousel-item-30"></button>
       <div class="overlay-bloqueo overraro"></div>
     </div>
 
@@ -1038,7 +1038,30 @@
           </div>
         </div>
 
+<!-------------------------------------030---------------------------------------->        
+        <div class="carousel-item Craro" id="carousel-item-30" > 
+                        <p class="textorareza"> MICHI PIRATA</p>
+                        <P class="textorareza PRARO" >RARA </P>
+          <div class="tarjeta">
+            <div class="carta frente" data-circle="circle4 circle5">
+              <img loading="lazy" class="medio" src="assets/cartas/RARAS/030/030_fondo.webp" />  
+          <div data-lazy="true" class="michi lazy-michi" data-style="
+                z-index: 10;
+                background-image: url('/assets/cartas/RARAS/030/030_fondo_animacion.webp'); 
+                animation: animacion 0.5s steps(4) forwards infinite;
+                background-size: 1236px 450px;
+            "></div>                        
+                <div class="lineascolores" style="z-index: 9; transform: rotate(45deg) scale(2); filter: grayscale(1) brightness(2);"></div>          
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_A.webp" style=" z-index: 11;  animation: flotar 1.5s ease-in-out alternate infinite">
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_B.webp" style=" z-index: 12;  animation:  desplazamientolateral 15s ease-in-out infinite">
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_C.webp" style=" z-index: 13;  animation: flotar 4s ease-in-out alternate infinite">
+                <img loading="lazy" class="michi" src="assets/cartas/RARAS/030/030_B2.webp" style=" z-index: 12;  animation: desplazamientolateral 13s ease-in-out reverse infinite">
+                <img loading="lazy" class="sombra" src="assets/cartas/RARAS/030/030_D.webp"   />
+                 <div data-lazy="true" class="codigoqrdecarta QRRARO" style="background-image: url(./assets/cartas/RARAS/030/030_QR.webp);"> </div> 
 
+            </div>
+          </div>
+        </div>
        
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
