--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="iconomenu lazy-michi" style="background-image: url(./assets/boton_tienda.webp); filter: grayscale(1) brightness(0.8);"></div>
     </div>
 </div>
-
+<DIV class="infoandroid" data-lazy="true"></DIV>
 
   <button id="installBtn" class="botondescargarapp"> 
     <p>DESCARGAR APP</p>
